Add PWA support to index.html
Added PWA manifest link and theme color meta tag.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koffee</title>
+
+    <!-- PWA manifest -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#6f4e37">
+
     <link rel="stylesheet" href="secnd.css">
 </head>
+
 
 <body>
 
@@ -42,5 +48,6 @@
     </section>
 
 </body>
+
 
 </html>
