--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Simply Koffee</title>
+       <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#6f4e37">
     <link rel="stylesheet" href="about.css">
 </head>
 
@@ -57,5 +59,6 @@
     </footer>
 
 </body>
+
 
 </html>
