--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simply Koffee - Contact Us</title>
+       <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#6f4e37">
     <link rel="stylesheet" href="contact.css">
 </head>
 
@@ -50,5 +52,6 @@
     </footer>
 
 </body>
+
 
 </html>
