--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simply Koffee - Menu</title>
+       <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#6f4e37">
     <link rel="stylesheet" href="menu.css">
 </head>
 
@@ -55,5 +57,6 @@
     </section>
 
 </body>
+
 
 </html>
