--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
             <img src="koffee.jpg" alt="Coffee cup">
         </div>
     </section>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js')
+    .then(() => console.log('Service Worker registered'))
+    .catch(err => console.error('SW registration failed:', err));
+}
+</script>
 
 </body>
 
 
 </html>
+
