--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@ if ('serviceWorker' in navigator) {
 
 </body>
 
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js')
+    .then(() => console.log('Service Worker registered'))
+    .catch(err => console.error('SW registration failed:', err));
+}
+</script>
 
 </html>
+
 
