--- a/about.html
+++ b/about.html
@@ -57,8 +57,16 @@
     <footer>
         <p>&copy; 2025 Simply Koffee. All Rights Reserved.</p>
     </footer>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js')
+    .then(() => console.log('Service Worker registered'))
+    .catch(err => console.error('SW registration failed:', err));
+}
+</script>
 
 </body>
 
 
 </html>
+
