--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,16 @@
             <p>© 2025 Simply Koffee. All rights reserved.</p>
         </div>
     </footer>
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js')
+    .then(() => console.log('Service Worker registered'))
+    .catch(err => console.error('SW registration failed:', err));
+}
+</script>
 
 </body>
 
 
 </html>
+
