--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     </footer>
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/service-worker.js')
+  navigator.serviceWorker.register('service-worker.js')
     .then(() => console.log('Service Worker registered'))
     .catch(err => console.error('SW registration failed:', err));
 }
@@ -69,4 +69,5 @@ if ('serviceWorker' in navigator) {
 
 
 </html>
+
 
