--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     </footer>
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/service-worker.js')
+  navigator.serviceWorker.register('service-worker.js')
     .then(() => console.log('Service Worker registered'))
     .catch(err => console.error('SW registration failed:', err));
 }
@@ -62,4 +62,5 @@ if ('serviceWorker' in navigator) {
 
 
 </html>
+
 
