--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,7 @@
     </section>
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/service-worker.js')
+  navigator.serviceWorker.register('service-worker.js')
     .then(() => console.log('Service Worker registered'))
     .catch(err => console.error('SW registration failed:', err));
 }
@@ -67,4 +67,5 @@ if ('serviceWorker' in navigator) {
 
 
 </html>
+
 
