--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@ if ('serviceWorker' in navigator) {
 
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js')
+  navigator.serviceWorker.register('/koffe_online/service-worker.js')
     .then(() => console.log('Service Worker registered'))
     .catch(err => console.error('SW registration failed:', err));
 }
 </script>
 
 </html>
+
 
 
 
