--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simply Koffee - Contact Us</title>
-       <link rel="manifest" href="manifest.json">
+       <link rel="manifest" href="/koffe_online/manifest.json">
     <meta name="theme-color" content="#6f4e37">
     <link rel="stylesheet" href="contact.css">
 </head>
@@ -62,6 +62,7 @@ if ('serviceWorker' in navigator) {
 
 
 </html>
+
 
 
 
