--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Simply Koffee</title>
-       <link rel="manifest" href="/koffe_online/manifest.json">
+       <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#6f4e37">
     <link rel="stylesheet" href="about.css">
 </head>
@@ -69,6 +69,7 @@ if ('serviceWorker' in navigator) {
 
 
 </html>
+
 
 
 
