--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Koffee</title>
 
     <!-- PWA manifest -->
-    <link rel="manifest" href="/koffe_online/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#6f4e37">
 
     <link rel="stylesheet" href="secnd.css">
@@ -65,6 +65,7 @@ if ('serviceWorker' in navigator) {
 </script>
 
 </html>
+
 
 
 
