--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('koffe_online/service-worker.js')
+  navigator.serviceWorker.register('service-worker.js')
     .then(() => console.log('Service Worker registered'))
     .catch(err => console.error('SW registration failed:', err));
 }
@@ -65,6 +65,7 @@ if ('serviceWorker' in navigator) {
 </script>
 
 </html>
+
 
 
 
