--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="secnd.css">
 </head>
 
-
 <body>
 
     <header>
@@ -46,30 +45,16 @@
             <img src="koffee.jpg" alt="Coffee cup">
         </div>
     </section>
-<script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js')
-    .then(() => console.log('Service Worker registered'))
-    .catch(err => console.error('SW registration failed:', err));
-}
-</script>
+
+    <!-- Service Worker registration -->
+    <script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('service-worker.js')
+            .then(() => console.log('Service Worker registered'))
+            .catch(err => console.error('SW registration failed:', err));
+    }
+    </script>
 
 </body>
 
-<script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/koffe_online/service-worker.js')
-    .then(() => console.log('Service Worker registered'))
-    .catch(err => console.error('SW registration failed:', err));
-}
-</script>
-
 </html>
-
-
-
-
-
-
-
-
