--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
                 <a href="contact.html" class="btn">Contact Us</a>
             </div>
         </div>
+<div class="hero-img">
+    <img src="koffee.jpg" alt="Coffee cup" style="max-width: 100%; height: auto;">
+</div>
 
-        <div class="hero-img">
-            <img src="koffee.jpg" alt="Coffee cup">
-        </div>
+        
     </section>
 
     <!-- Service Worker registration -->
@@ -58,4 +59,5 @@
 </body>
 </div>
 </html>
+
 
