--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 <div class="hero-img">
-    <img src="koffee.jpg" alt="Coffee cup" style="max-width: 100%; height: auto;">
+    <img src="koffee.jpg" alt="Coffee cup">
 </div>
 
         
